Removendo o campo msg_sefaz da tabela subtask
