# src/main/java/com/oneprocess/rpa/model/RpaSubtask.java
@@ -30,9 +30,6 @@ public class RpaSubtask {
     @Column(name = "msg_erro", columnDefinition = "TEXT")
     private String msgErro;
     
-    @Column(name = "msg_sefaz")
-    private String msgSefaz;
-    
     // Business Data (ERP)
     @Column(name = "numero_documento")
     private String numeroDocumento;
